--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
 		<testcontainers.version>1.15.3</testcontainers.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>com.yahoofinance-api</groupId>
+			<artifactId>YahooFinanceAPI</artifactId>
+			<version>3.15.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -62,6 +69,9 @@
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
+
+
+
 	</dependencyManagement>
 
 	<build>
