--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.conygre.spring.boot.data</groupId>
-	<artifactId>CompactDiscRestDataBoot</artifactId>
+	<artifactId>SpringBootPortfolioAPI</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<java.version>11</java.version>
