--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>com.conygre.spring.boot.SpringBootPortfolioAPIApplication</start-class>
+		<start-class>com.conygre.training.springboot.SpringBootPortfolioAPI.SpringBootPortfolioAPIApplication</start-class>
 	</properties>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
