--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.conygre.spring.boot.data</groupId>
-	<artifactId>SpringBootPortfolioAPI</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<properties>
-		<java.version>11</java.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>com.conygre.training.springboot.SpringBootPortfolioAPI.SpringBootPortfolioAPIApplication</start-class>
-	</properties>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.3</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<groupId>com.conygre.training.springboot</groupId>
+	<artifactId>SpringBootPortfolioAPI</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>SpringBootPortfolioAPI</name>
+	<description>Project for Spring Boot</description>
+	<properties>
+		<java.version>11</java.version>
+		<testcontainers.version>1.15.3</testcontainers.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
