--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://namdevops3.conygre.com:3306/portfolio_manager?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=conygre
-spring.datasource.password=C0nygre-C0nygre
+spring.datasource.url=jdbc:mysql://${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/${OPENSHIFT_MYSQL_DB_NAME}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=${OPENSHIFT_MYSQL_DB_USERNAME}
+spring.datasource.password=${OPENSHIFT_MYSQL_DB_PASSWORD}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
